# crackle

./: .bash_history  .gitignore  .gitmodules  =20.3  Crackle_Sticker_Attachment.stl  Dockerfile  Makefile  README.md  bash_tools  calibrate.py  depthEstimation.py  detect_apriltag.py  detect_apriltag_prot.py  frames_2026-07-18_08.44.10.gv  handDetector.py  moveArm.py  objectDetection.py  requirements.txt  ros_entrypoint.sh  setup.sh  yolo  yoloObjectDetection.py
MicData/: CSV Cleaner.py  CrossCorrelation.py  FastFourierTransform.py  FindPeaks.py  MicData.ino  ReadingSerial.py
MicData/3D Mic Array/: compute_direction.py  generate_data.py
MicData/45 Degrees Left/: 2.csv
MicData/45 Degrees Right/: 2.csv
MicData/90 Degrees Left/: 7.csv
arduino_mic_reader/: arduino_mic_reader.ino
audioTest/: audioProcessing.py
audio_localization/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  Fix Overflow.py  ReadingSerial.py  package.xml  plotting_sound.py  plotting_sound_waves.py  reading_serial_sound.py  setup.cfg  setup.py
audio_localization/audio_localization/: audio_localization.py  mic_publisher.py
audio_localization/audio_localization_arduino/: audio_localization_arduino.ino  linear_algebra.hpp
audio_localization/python_protyping/: CrossCorrelation.py  compute_direction.py  generate_mock_data.py  reading_serial.py
audio_localization/sound_direction_publisher/: package.xml  setup.cfg  setup.py
audio_localization_arduino/: audio_localization_arduino.ino  linear_algebra.cpp  linear_algebra.hpp
audio_serial_reader/: package.xml  setup.cfg  setup.py
audio_serial_reader/audio_serial_reader/: audio_serial_reader.py
bash_scripts/: build.bash  dockwenter.bash  env_setup.sh  join.bash  launch_arm_controller.sh  launch_arm_rviz.sh  rosbags.sh  run.bash  setup.sh  starship.toml  start_crackle.sh  test_fe.sh
clawArmPositionCalculator/: angleCalculator.py  commonShapes.py
clawArmPositionCalculator/ClawArm/: graph_closing_data.py  graph_sensor_readouts.py  platformio.ini  read_serial.py  send_cmd.py
clawArmPositionCalculator/claw_degree_publisher/: package.xml  setup.cfg  setup.py
crackle_3d/: package.xml  setup.py
crackle_3d/crackle_3d/: point_cloud_preprocessor.py
crackle_3d/launch/: point_cloud_processor_launch.py
crackle_3d/rviz/: point_cloud_viz.rviz
crackle_bringup/: CMakeLists.txt  package.xml
crackle_bringup/launch/: crackle_bringup.launch.py
crackle_description/: Arm_Left.stl  Arm_Right.stl  CMakeLists.txt  SpurGear_Right.stl
crackle_description/meshes/: ClawBase.stl  Claw_Casing.stl  Gripper_Left.stl  Gripper_Right.stl  SpurGear.stl  SpurGear_Left.stl  elBase.stl  iSwearThiSWIllWork!!!!.stl
crackle_description/urdf/: crackle_gripper.urdf.xacro
crackle_face/: CMakeLists.txt  package.xml
crackle_face_node/: CMakeLists.txt  package.xml
crackle_face_node/src/: face_node.cpp
crackle_interfaces/: CMakeLists.txt  package.xml
crackle_interfaces/msg/: AudioData.msg  LeapMotionHand.msg  YoloInferences.msg  YoloSegment.msg
crackle_interfaces/srv/: DemoTrajectory.srv  ExecutePlan.srv  FaceDirectionRelative.srv  FindObjects.srv  GetCollisionObjects.srv  GetEndEffectorPose.srv  LookAt.srv  MoveRelative.srv  PlaceObject.srv  PlanPose.srv  PlanTrajectory.srv  RecognizePerson.srv  SetJointAngles.srv
crackle_move_arm/: package.xml  setup.cfg  setup.py
crackle_move_arm/src/: move_arm.py
crackle_moveit/: CMakeLists.txt  package.xml
crackle_moveit/config/: sensors_3d.yaml
crackle_moveit/include/crackle_moveit/: moveit_manipulation.hpp  moveit_scene_updater.hpp  moveit_task_constructor.hpp
crackle_moveit/launch/: crackle_moveit_bringup.launch.py  moveit_bringup.launch.py  scene_updater.launch.py
crackle_moveit/src/: moveit_manipulation.cpp  moveit_scene_updater.cpp  moveit_task_constructor.cpp  task_constructor.cpp
crackle_packages/crackle_3d/: setup.cfg  setup.py
crackle_packages/crackle_description/: package.xml
crackle_packages/crackle_interfaces/: CMakeLists.txt  package.xml
crackle_packages/crackle_moveit/: CMakeLists.txt  package.xml
crackle_packages/crackle_planning/: setup.cfg
crackle_packages/crackle_testing/: package.xml  setup.cfg  setup.py
crackle_packages/crackle_vision/: package.xml
crackle_planning/: package.xml  setup.py
crackle_planning/crackle_planning/: Lee-oh.onnx  Lee-oh_float32.tflite  _api.py  _config.py  _llm.py  api_test_node.py  arm_planner.py  crackle_config.json  cuboid-2026-04-21-00-42-34.stl  example.py  idle_scan_poses.json  idle_scan_prompt.txt  lee_oh_v0.1.onnx  lee_oh_v0.1.tflite  lee_oh_v0.2.onnx  lee_oh_v0.2.tflite  lee_oh_v0.3.onnx  lee_oh_v0.3.tflite  leeoh.onnx  leeoh.tflite  main.py  parse.py  phor_mer--prez_a_dent.onnx  phor_mer--prez_a_dent.tflite  planner.py  ros_interface.py  search_poses.json  sim_ros_interface.py  test.py  test_embedding.py  test_embedding_out.txt  voice_system.py
crackle_rosbag/: CMakeLists.txt  package.xml
crackle_rosbag/launch/: record.launch.py
crackle_rosbag/src/: crackle_rosbag.cpp
crackle_testing/crackle_testing/: test_service.py  test_subscriber.py
crackle_vision/: package.xml  setup.cfg  setup.py
crackle_vision/crackle_vision/: camera_publisher.py  pcd_tools.py  segment_img.py  vision_server.py  yolo_segment_node.py  yolo_test.ipynb
crackle_vision/launch/: crackle_vision_launch.py
crackle_vision/scripts/: handeye_calibrate.py
crackle_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
crackle_ws/log/: latest_build
docker/: Dockerfile  sample_Dockerfile
esp_audio_localization/: platformio.ini
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
leapmotion/: CMakeLists.txt  package.xml
log/: latest_build
mic_publisher/: package.xml  setup.cfg  setup.py
octomap_server2/: CMakeLists.txt
python_scripts/: calibrate.py  grip_point_echo.py  moveArm.py
sipeed_tof_ms_a010/: CMakeLists.txt  package.xml
tf_pub/: package.xml  setup.cfg  setup.py
xArm-Python-SDK/: LICENSE  README.md  ReleaseNotes.md  main.py  setup.py  test-main.py
xarm/: __init__.py
xarm_ros2/: ReadMe.md  ReadMe_cn.md
(+2803 files in other folders)
